syntax = "proto3";
import "resp.proto";
package mproto;


// CLIENT REQ : MSG_ID 0
// 1.PING
message PING {
  int64 time = 1; // 当前时间戳 格式 毫秒(ms) 1567668727760
}

// CLIENT REQ : MSG_ID 100
// 1.登录请求
message ReqLogin {
  string userId = 1;
  string userPassword = 2;
  string token = 3;
}

// CLIENT REQ : MSG_ID 101
// 1.获取会话列表
message ReqConversionList {
  string userId = 1;
  int32 skip = 2; // 跳过多少条
  int32 limit = 3; // 每次拉取多少条
}


// CLIENT REQ : MSG_ID 102
// 1.获取消息列表
message ReqMsgList {
  string userId = 1;
  string toUserId = 2; // 对方用户id
  int32 skip = 3; // 跳过多少条
  int32 limit = 4; // 每次拉取多少条
}

// CLIENT REQ : MSG_ID 103
// 1.发送消息
message ReqSendChatMsg {
  ChatMsg chatMsg = 1;
}

// CLIENT REQ : MSG_ID 104
// 1.已读一条消息
message ReqReadChatMsg {
  string msgId = 1; // 消息id
  string userId = 2; // 用户id
  string toUserId = 3;
}

// CLIENT REQ : MSG_ID 105
// 1.获取未读条数
message ReqGetUnReadNum {
  string conversionId = 1; // 会话id
  string userId = 2; // 用户id
  string toUserId = 3;
}

// CLIENT REQ : MSG_ID 106
// 1.删除消息
message ReqDeleteChatMsg {
  string reqUserId = 1; // 请求删除的 用户id  // 谁请求的就传谁的id
  string msgId = 2; // 消息id
  string userId = 3; // 用户id
  string toUserId = 4; // 消息的toUserId
}

// CLIENT REQ : MSG_ID 107
// 1.删除会话
message ReqDeleteConversion {
  string conversionId = 1; // 会话id
  string userId = 2; // 用户id
  string toUserId = 3;
}

// CLIENT REQ : MSG_ID 108
// 1.编辑消息
message ReqEditChatMsg {
  string msgId = 1; // 会话id
  string userId = 2; // 用户id
  string toUserId = 3;// toId
  string newMsgContent = 4; // 新的消息内容
}


// CLIENT REQ : MSG_ID 109
// 1.搜索用户
message ReqSearchUser {
  string userId = 1; // 当前执行次操作的userId
  string searchUserId = 2;// 查询的用户id
}

// CLIENT REQ : MSG_ID 110
// 1.搜索下级用户
message ReqSearchSubUser {
  string userId = 1; // 当前执行次操作的userId
  string searchUserId = 2;// 查询的用户id
}

// CLIENT REQ : MSG_ID 111
// 1.获取下级用户列表
message ReqGetSubUserList {
  string userId = 1; // 当前执行次操作的userId
  int32  skip = 2; // 跳过多少条
  int32 limit = 3; // 每次拉取多少条
}

// CLIENT REQ : MSG_ID 112
// 1.匹配客服
message ReqMatchService {
  string userId = 1; // 当前执行次操作的userId
  string serviceType = 2; // 	// 客服分类 1 充值未到账 2 兑换未到账 3 活动问题 4 其他
  string brand = 3; // 当前客服端品牌 , 特斯特 德比   直接传中文
}

// CLIENT REQ : MSG_ID 113
// 1.获取快捷回复列表
message ReqGetQuickReplyList {
  string serviceType = 1; // 	// 客服分类 1 充值未到账 2 兑换未到账 3 活动问题 4 其他
}